<resources>
    <string name="app_name">FAST Transit Hub</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="register">Register</string>
    <string name="roll_number_20f_xxxx">Roll Number (20F-XXXX)</string>
    <string name="name">Name</string>
    <string name="registration">Registration</string>
    <string name="phone_number">Phone Number</string>
    <string name="upload_image">Upload Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="route">Route</string>
    <string name="route_list">Route List</string>
    <string name="students_list">Students List</string>
    <string name="select_time">Select Time</string>
    <string name="routes">Routes</string>
    <string name="stop">Stop</string>
    <string name="stop_time">Stop Time</string>
    <string name="time">Time</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="paid_students">Paid Students</string>
    <string name="unpaid_students">Unpaid Students</string>
    <string name="report">Report</string>
</resources>