<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.user_Account_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/Account_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="My Profile"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/profile_Image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@drawable/border"
            android:onClick="Select_Image"
            android:padding="10dp"
            app:srcCompat="@drawable/name_icon_focused"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/acc_name"
            android:layout_width="277dp"
            android:layout_height="53dp"
            android:layout_margin="15dp"
            android:background="@drawable/custom_input"
            android:padding="10dp"
            android:drawableStart="@drawable/custom_name_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/acc_rollNo"
            android:layout_width="277dp"
            android:layout_height="53dp"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_roll_no_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/roll_number_20f_xxxx"
            />


        <EditText
            android:id="@+id/acc_email"
            android:layout_width="277dp"
            android:layout_height="53dp"
            android:layout_margin="15dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/email_address"
            android:padding="10dp" />
        <EditText
            android:id="@+id/acc_phoneNo"
            android:layout_width="277dp"
            android:layout_height="53dp"
            android:layout_margin="15dp"
            android:padding="10dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_phone_icon"
            android:drawablePadding="12dp"
            android:hint="@string/phone_number"
             />
        <Button
            android:id="@+id/acc_btn"
            android:layout_width="140dp"
            android:layout_margin="15dp"
            android:layout_height="wrap_content"
            android:onClick="Register"
            style="@style/CardView.Light"
            android:padding="4dp"
            android:text="UPDATE"
            android:textAlignment="center" />
    </LinearLayout>
</ScrollView >